--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,29 @@
-<h1>Hello Login Component</h1>
+<div class="login-container" layout="row">
+  <div flex>
+    <div layout="column" class="md-inline-form">
+      <md-card>
+        <md-card-title>LOGIN</md-card-title>
+        <md-card-content>
+          <form>
+            <table cellspacing="0">
+              <tr>
+                <td>
+                  <md-input placeholder="Username" style="width: 100%"></md-input>
+                </td>
+              </tr>
+            </table>
+            <table cellspacing="0">
+                <tr>
+                    <td>
+                        <md-input placeholder="Password" style="width: 100%"></md-input>
+                    </td>
+                </tr>
+            </table>
+            <button md-raised-button color="primary" class="large-button">LOGIN</button>
+          </form>
+    </md-card-content>
+    <a routerLink="/signup">CREATE ACCOUNT</a>
+    </md-card>
+</div>
+  </div>
+</div>
