Fix broken temaplate
Signed-off-by: Nikola <n.marcetic86@gmail.com>

--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,2 +1,4 @@
-<h1>Hello Dashboard</h1>
-<my-device-list></my-device-list>
+<div layout="row" layout-wrap>
+    <h1>Hello Dashboard</h1>
+    <my-device-list></my-device-list>
+</div>
