--- a/src/app/dashboard/devices/device-list/device-list.component.html
+++ b/src/app/dashboard/devices/device-list/device-list.component.html
@@ -1,13 +1,16 @@
 <div class="" layout="row" layout-wrap>
   <h3>My Devices</h3>
   <hr>
-  <div flex="25" *ngFor='let device of devices'>
+  <div flex="50" flex-xs="100" *ngFor='let device of devices'>
       <md-card>
         <md-card-title>{{device.name}}</md-card-title>
         <md-card-content>
-            hello device details
+            hello device details, channels: {{device.channels.length}}
         </md-card-content>
-        <a routerLink="/signup">SHOW CHANNELS</a>
+        <md-card-actions>
+            <button *ngIf="device.channels.length > 0" md-button>SHOW CHANNELS</button>
+            <button md-button>EDIT</button>
+        </md-card-actions>
       </md-card>
   </div>
 </div>
