Updated dependency version
Signed-off-by: nmarcetic <n.marcetic86@gmail.com>

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,14 +8,18 @@
             <table cellspacing="0">
               <tr>
                 <td>
-                  <md-input placeholder="Username" style="width: 100%"></md-input>
+                  <md-input-container>
+                        <input mdInput placeholder="Username" name="Username" style="width: 100%">
+                  </md-input-container>
                 </td>
               </tr>
             </table>
             <table cellspacing="0">
                 <tr>
                     <td>
-                        <md-input placeholder="Password" style="width: 100%"></md-input>
+                        <md-input-container>
+                            <input mdInput placeholder="Password" name="Password" style="width: 100%">
+                        </md-input-container>
                     </td>
                 </tr>
             </table>
