Added custom color palette
Signed-off-by: nmarcetic <n.marcetic86@gmail.com>

--- a/src/app/dashboard/devices/device-list/device-list.component.html
+++ b/src/app/dashboard/devices/device-list/device-list.component.html
@@ -5,7 +5,7 @@
       <md-card>
         <md-card-title>{{device.name}}</md-card-title>
         <md-card-content>
-            hello device details, channels: {{device.channels.length}}
+            channels: {{device.channels.length}}
         </md-card-content>
         <md-card-actions>
             <button *ngIf="device.channels.length > 0" md-button>SHOW CHANNELS</button>
