--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,4 +1,3 @@
-<div layout="row" layout-wrap>
-    <h1>Hello Dashboard</h1>
+<div class="dashboard-container" layout="row" layout-wrap>
     <my-device-list></my-device-list>
 </div>
