--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,7 +8,7 @@
             <table cellspacing="0">
               <tr>
                 <td>
-                      <md-input-container>
+                      <md-input-container style="width: 100%">
                           <input mdInput placeholder="Username" name="Username" style="width: 100%">
                       </md-input-container>
                 </td>
@@ -17,7 +17,7 @@
             <table cellspacing="0">
                 <tr>
                     <td>
-                        <md-input-container>
+                        <md-input-container style="width: 100%">
                             <input mdInput placeholder="Password" name="Password" style="width: 100%">
                         </md-input-container>
                     </td>
