WIP device CRUD
Signed-off-by: nmarcetic <n.marcetic86@gmail.com>

--- a/src/app/dashboard/devices/list/device-list.component.html
+++ b/src/app/dashboard/devices/list/device-list.component.html
@@ -10,7 +10,7 @@
         <md-card-actions>
             <button *ngIf="device.channels.length > 0" md-button>SHOW CHANNELS</button>
             <button md-button>EDIT</button>
-            <device-delete></device-delete>
+            <device-delete [device]="device"></device-delete>
         </md-card-actions>
       </md-card>
   </div>
