WIP device CRUD
Signed-off-by: nmarcetic <n.marcetic86@gmail.com>

--- a/src/app/dashboard/devices/list/device-list.component.html
+++ b/src/app/dashboard/devices/list/device-list.component.html
@@ -1,5 +1,6 @@
 <div class="" layout="row" layout-wrap>
-  <h3>My Devices</h3>
+  <h3>My Devices <button md-fab ><md-icon>add</md-icon></button></h3>
+
   <hr>
   <div flex="50" flex-xs="100" *ngFor='let device of devices'>
       <md-card>
