--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,15 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: #fafafa;
+    background: pink !important;
+    font-family: Consolas,Source Code Pro,Courier New;
+    color: #5f5f5f;
 }
-
 .large-button {
     width: 100%;
+}
+
+.mat-sidenav-container {
+ background: #eee;
+color: #5f5f5f;
 }
