--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,3 +8,18 @@
 @import "_global.scss";
 @import "_theme.scss";
 @import "shared/_vars.scss";
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background: #eee !important;
+    font-family: Consolas,Source Code Pro,Courier New;
+    color: #5f5f5f;
+}
+
+md-toolbar-row {
+  justify-content: space-between;
+}
