--- a/src/app/dashboard/devices/update/device-update.component.html
+++ b/src/app/dashboard/devices/update/device-update.component.html
@@ -1,5 +1,5 @@
 <h3>New Device</h3>
-<form class="userForm" [formGroup]="form" novalidate (ngSubmit)="addDevice(form.value, form.valid)">
+<form class="userForm" [formGroup]="form" novalidate (ngSubmit)="updateDevice(form.value, form.valid)">
   <md-input-container class="firstName">
     <input
       mdInput
