--- a/src/app/dashboard/devices/list/device-list.component.scss
+++ b/src/app/dashboard/devices/list/device-list.component.scss
@@ -6,3 +6,11 @@
 h3 {
     font-weight: 300;
 }
+
+.no-device-container {
+    text-align: center;
+	letter-spacing: 1px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300 !important;
+
+}
