--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,23 @@
-<md-sidenav-container fullscreen>
-  <md-sidenav mode="side" opened="false" #sidenav class="app-sidenav">
-    <md-toolbar color="primary">Mainflux Logo</md-toolbar>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav mode="side" opened="false" #sidenav class="app-sidenav">
+    <mat-toolbar color="primary">Mainflux Logo</mat-toolbar>
     <h5>Sidenav data goes here...</h5>
-  </md-sidenav>
+  </mat-sidenav>
   <div class="main-content">
-    <md-toolbar color="primary">
+    <mat-toolbar color="primary">
       <div fxLayout="row" fxLayoutAlign="start stretch">
-        <span><button md-button (click)="sidenav.toggle()"><md-icon>menu</md-icon></button></span>
+        <span><button mat-button (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button></span>
       </div>
       <span><h2>{{title}}</h2></span>
       <div id="right_nav" fxLayout="row" fxLayoutAlign="end">
-        <span><button md-button><md-icon>add</md-icon> Create</button></span>
-        <span><button md-button><md-icon>help</md-icon></button></span>
-        <span><button md-button><md-icon>alarm</md-icon></button></span>
-        <span><button md-button><md-icon>face</md-icon></button></span>
+        <span><button mat-button><mat-icon>add</mat-icon> Create</button></span>
+        <span><button mat-button><mat-icon>help</mat-icon></button></span>
+        <span><button mat-button><mat-icon>alarm</mat-icon></button></span>
+        <span><button mat-button><mat-icon>face</mat-icon></button></span>
       </div>
-    </md-toolbar>
+    </mat-toolbar>
   </div>
   <main>
     <router-outlet></router-outlet>
   </main>
-</md-sidenav-container>
+</mat-sidenav-container>
