--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -7,7 +7,7 @@
         width: 100%;
     }
 
-    .md-card-title {
+    .mat-card-title {
         text-align: center;
         color: silver;
     }
