--- a/src/app/dashboard/devices/update/device-update.component.html
+++ b/src/app/dashboard/devices/update/device-update.component.html
@@ -1,35 +1,35 @@
 <h3>New Device</h3>
 <form class="userForm" [formGroup]="form" novalidate (ngSubmit)="updateDevice(form.value, form.valid)">
-  <md-input-container class="firstName">
+  <mat-form-field class="firstName">
     <input
-      mdInput
+      matInput
       placeholder="Device Name"
       formControlName="name"
       name="device_name"
       type="text"
       required
       >
-  </md-input-container>
+  </mat-form-field>
   <br>
-  <md-input-container class="lastName">
+  <mat-form-field class="lastName">
     <input
-      mdInput
+      matInput
       placeholder="Short Description..."
       formControlName="description"
       name="device_description"
       type="text"
       required
       >
-  </md-input-container>
+  </mat-form-field>
 
   <br>
 
   <div class="userActionButtonGroup">
-    <button md-icon-button md-mini-fab color="accent" type="submit">
-      <md-icon  class="material-icons">done</md-icon>
+    <button mat-icon-button mat-mini-fab color="accent" type="submit">
+      <mat-icon  class="material-icons">done</mat-icon>
     </button>
-    <button md-icon-button md-mini-fab color="warn" md-dialog-close>
-      <md-icon  class="material-icons">cancel</md-icon>
+    <button mat-icon-button mat-mini-fab color="warn" matDialogClose>
+      <mat-icon  class="material-icons">cancel</mat-icon>
     </button>
   </div>
 
