--- a/src/app/components/clients/client-card/client-card.component.html
+++ b/src/app/components/clients/client-card/client-card.component.html
@@ -11,7 +11,7 @@
     </div>
   </mat-card-content>
   <mat-card-actions fxLayoutAlign="end end">
-    <button color="primary" mat-icon-button><mat-icon>edit</mat-icon></button>
+    <button color="primary" mat-icon-button (click)="onEdit()"><mat-icon>edit</mat-icon></button>
     <button color="warn" mat-icon-button (click)="onDelete()"><mat-icon>delete</mat-icon></button>
   </mat-card-actions>
 </mat-card>
