--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -2,7 +2,7 @@
   <ng-container [ngSwitch]="(clients | async).length > 0">
     <ng-container *ngSwitchCase="true">
       <ng-container *ngFor="let client of clients | async">
-        <app-client-card class="clientCard" fxFlex.gt-sm="28%" fxFlex.sm="42%" fxFlex.xs="90%" [client]="client" (delete)="deleteClient(client)"></app-client-card>
+        <app-client-card class="clientCard" fxFlex.gt-sm="28%" fxFlex.sm="42%" fxFlex.xs="90%" [client]="client" (delete)="deleteClient(client)" (edit)="editClient(client)"></app-client-card>
       </ng-container>
     </ng-container>
     <ng-container *ngSwitchDefault>
