--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,11 @@
 
 <mat-toolbar color="primary" class="mat-elevation-z6">
     <h1 fxFlex>Mainflux</h1>
+    <ng-container *ngIf="isAuthenticated | async">
+        <a [routerLink]="['/clients']" mat-button>Clients</a>
+        <a [routerLink]="['/channels']" mat-button>Channels</a>
+        <a (click)="logout()" mat-button>Logout</a>
+    </ng-container>
+
 </mat-toolbar>
 <router-outlet></router-outlet>
