--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<div class="loading" *ngIf="loading | async" fxLayoutAlign="center center">
-    <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
+<div *mobxAutorun>
+    <div class="loading" *ngIf="stateStore.loading" fxLayoutAlign="center center">
+        <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
+    </div>
+    <mat-toolbar color="primary" class="mat-elevation-z6">
+        <h1 fxFlex>Mainflux</h1>
+        <ng-container *ngIf="stateStore.isAuthenticated">
+            <a [routerLink]="['/clients']" mat-button>Clients</a>
+            <a [routerLink]="['/channels']" mat-button>Channels</a>
+            <a (click)="logout()" mat-button>Logout</a>
+        </ng-container>
+    
+    </mat-toolbar>
+    <router-outlet></router-outlet>
 </div>
-
-<mat-toolbar color="primary" class="mat-elevation-z6">
-    <h1 fxFlex>Mainflux</h1>
-    <ng-container *ngIf="isAuthenticated | async">
-        <a [routerLink]="['/clients']" mat-button>Clients</a>
-        <a [routerLink]="['/channels']" mat-button>Channels</a>
-        <a (click)="logout()" mat-button>Logout</a>
-    </ng-container>
-
-</mat-toolbar>
-<router-outlet></router-outlet>
