--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Login</mat-card-title>
       <mat-card-content class="loginCard" fxLayout="column" fxLayoutAlign="space-evenly">
         <mat-form-field fxFlex="40%">
-          <input type="text" required matInput placeholder="Email" formControlName="email"/>
+          <input type="text" class="emailInput" required matInput placeholder="Email" formControlName="email"/>
           <mat-error *ngIf="loginForm.get('email').errors?.required">
             Email is required
           </mat-error>
@@ -13,15 +13,15 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field fxFlex="30%">
-          <input type="password" required matInput placeholder="Password" formControlName="password" />
+          <input type="password" class="passwordInput" required matInput placeholder="Password" formControlName="password" />
           <mat-error *ngIf="loginForm.get('password').errors?.required">
             Password is required
           </mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions fxLayout="column">
-        <button type="submit" [disabled]="loginForm.invalid" mat-raised-button color="primary" class="large-button">Login</button>
-        <a mat-button (click)="signup()">Sign Up with Email</a>
+        <button type="submit" [disabled]="loginForm.invalid" mat-raised-button color="primary" class="loginButton">Login</button>
+        <button mat-button (click)="signup()" class="signupButton">Sign Up with Email</button>
       </mat-card-actions>
     </mat-card>
   </form>
