--- a/src/app/components/clients/client-card/client-card.component.html
+++ b/src/app/components/clients/client-card/client-card.component.html
@@ -9,6 +9,9 @@
     <div>
       Id: {{client.id}}        
     </div>
+    <div>
+      Meta: {{client.meta | json}}
+    </div>
   </mat-card-content>
   <mat-card-actions fxLayoutAlign="end end">
     <button color="primary" mat-icon-button (click)="onEdit()"><mat-icon>edit</mat-icon></button>
