Move store classes into their dedicated modules
Add tests for every store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div *mobxAutorun>
-    <div class="loading" *ngIf="stateStore.loading" fxLayoutAlign="center center">
+    <div class="loading" *ngIf="uiStore.loading" fxLayoutAlign="center center">
         <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
     </div>
     <mat-toolbar color="primary" class="mat-elevation-z6">
         <h1 fxFlex>Mainflux</h1>
-        <ng-container *ngIf="stateStore.isAuthenticated">
+        <ng-container *ngIf="authStore.isAuthenticated">
             <a [routerLink]="['/clients']" mat-button>Clients</a>
             <a [routerLink]="['/channels']" mat-button>Channels</a>
             <a (click)="logout()" mat-button>Logout</a>
