--- a/src/app/components/channels/add-channel-dialog/add-channel-dialog.component.html
+++ b/src/app/components/channels/add-channel-dialog/add-channel-dialog.component.html
@@ -10,7 +10,7 @@
       </mat-form-field>
       <mat-form-field>
           <mat-select placeholder="Connected clients" formControlName="connected" multiple>
-            <mat-option *ngFor="let client of stateStore.clients" [value]="client.id">{{client.name}}</mat-option>
+            <mat-option *ngFor="let client of clientsStore.clients" [value]="client.id">{{client.name}}</mat-option>
           </mat-select>
         </mat-form-field>
     </div>
