--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,7 +1,7 @@
 <div class="clientsContainer" fxLayout="row" fxLayoutWrap>
-  <ng-container [ngSwitch]="stateStore.clients.length > 0">
+  <ng-container [ngSwitch]="clientsStore.clients?.length > 0">
     <ng-container *ngSwitchCase="true">
-      <ng-container *ngFor="let client of stateStore.clients">
+      <ng-container *ngFor="let client of clientsStore.clients">
         <app-client-card class="clientCard" fxFlex.gt-sm="28%" fxFlex.sm="42%" fxFlex.xs="90%" [client]="client" (delete)="deleteClient(client)" (edit)="editClient(client)"></app-client-card>
       </ng-container>
     </ng-container>
