Display clients and channels in a list instead of using cards
Signed-off-by: Manuel Imperiale <manuel.imperiale@gmail.com>

--- a/src/app/components/channels/channels.component.scss
+++ b/src/app/components/channels/channels.component.scss
@@ -1,9 +1,10 @@
-::ng-deep .channelCard {
-    margin: 18px;
-}
-
 .addButton {
     position: fixed;
     bottom: 12px;
     right: 12px;
+}
+
+/* List container */
+.channel-list-container {
+  width: 100%;
 }
