--- a/src/app/components/clients/clients.component.scss
+++ b/src/app/components/clients/clients.component.scss
@@ -1,9 +1,10 @@
-::ng-deep .clientCard {
-    margin: 18px;
-}
-
 .addButton {
     position: fixed;
     bottom: 12px;
     right: 12px;
+}
+
+/* List container */
+.client-list-container {
+  width: 100%;
 }
