--- a/src/app/components/channels/add-channel-dialog/add-channel-dialog.component.html
+++ b/src/app/components/channels/add-channel-dialog/add-channel-dialog.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="addChannelForm" (ngSubmit)="onAddChannel()">
-    <h1 mat-dialog-title>Add channel</h1>
+    <h1 *ngIf="!editMode" mat-dialog-title>Add channel</h1>
+    <h1 *ngIf="editMode" mat-dialog-title>Edit channel</h1>
     <div mat-dialog-content fxLayout="column">
       <input type="hidden" formControlName="id">
       <mat-form-field>
